# SoundZ

./: .gitignore  MANIFEST.in  client.py  client_gui.py  client_old.py  client_tcp.py  get_libopus.py  new_soundz.py  play_wave_file.py  requirements.txt  server.py  server_old.py  server_tcp.py  setup.cfg  setup.py  sock_test.py  soundloop.py  soundz.py  soundz_audio.py  soundz_udp_min_receiver.py  soundz_udp_min_sender.py  soundz_udp_receiver.py  soundz_udp_sender.py  test_new_soundz.py  test_soundz.py
SoundZ/: _opuslib.py  audio.py  client.py  client_gui.py  server.py  streams.py
dev_scripts/: client_tcp.py  get_libopus.py  new_soundz.py  play_sound.py  play_wave_file.py  server_tcp.py  sock_test.py  soundloop.py  soundz_udp_min_receiver.py  soundz_udp_min_sender.py  soundz_udp_receiver.py  soundz_udp_sender.py  test_new_soundz.py  test_soundz.py  tiny_streams.py
sounds/: credits.txt
